[gd_scene load_steps=4 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://assets/Aero.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[node name="Server" type="Node2D"]
script = ExtResource( 1 )

[node name="Players" type="Node" parent="."]

[node name="Matching" type="Node" parent="."]

[node name="Rooms" type="Node" parent="."]

[node name="Playing" type="Node" parent="."]

[node name="SinglePlayer" type="Node" parent="."]

[node name="SinglePlayerRoom" type="Node" parent="."]

[node name="labelTotalClient" type="Label" parent="."]
margin_left = 12.0
margin_top = 17.0
margin_right = 237.0
margin_bottom = 65.0
text = "Total clients connected: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelClientList" type="Label" parent="."]
margin_left = 12.0
margin_top = 49.0
margin_right = 182.0
margin_bottom = 389.0
text = "Client:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelConnectDisconnectAlert" type="Label" parent="."]
margin_left = 293.0
margin_top = 13.0
margin_right = 478.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
margin_left = 598.714
margin_top = 205.87
margin_right = 766.714
margin_bottom = 263.87
custom_fonts/font = SubResource( 1 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
